stop intro section from wrapping

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,6 @@ body {
     gap: 32px;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
 }
 
 .intro-info {
@@ -56,7 +55,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     width: 500px;
-    flex-shrink: 0;
+    min-width: 300px;
 }
 
 .intro-info p {
